♻️ (ux) Fully hide subnav, not just visually
Originally our a11y team thought visually hiding would be better to allow AT users to navigate
subnav by links, but after testing the visually hidden solution, they thought that it not matching
the screen's visuals was a worse UX. Returning to fully hiding subnav to remove this disconnect.

--- a/templates/_components/nav.html
+++ b/templates/_components/nav.html
@@ -20,9 +20,9 @@
         {% for section in item.sections %}
         <li class="nav__secondary-item">
           {% if section.alt %}
-          <a class="nav__link type--primary-nav" href="/{{locale.code}}/{{section.url}}" data-alt="/{{locale.code}}/{{section.alt}}" tabindex="-1">{{section.title}}</a>
+          <a class="nav__link type--primary-nav" href="/{{locale.code}}/{{section.url}}" data-alt="/{{locale.code}}/{{section.alt}}">{{section.title}}</a>
           {% else %}
-          <a class="nav__link type--primary-nav" href="/{{locale.code}}/{{section.url}}" tabindex="-1">{{section.title}}</a>
+          <a class="nav__link type--primary-nav" href="/{{locale.code}}/{{section.url}}">{{section.title}}</a>
           {% endif %}
         </li>
         {% endfor %}
