--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -224,10 +224,6 @@
   &__secondary {
     padding-right: 1.5em;
 
-    &[hidden] {
-      @include visuallyHidden;
-    }
-
     @include minLangMQ($bkpt-map--header--large) {
       @include elevation(1);
       background: var(--white);
@@ -248,6 +244,10 @@
         margin: 0 0.75rem;
         padding: 1.125rem 0;
       }
+    }
+
+    &[hidden] {
+      display: none;
     }
 
     &-item {
