--- a/src/sass/layouts/_tech-detail.scss
+++ b/src/sass/layouts/_tech-detail.scss
@@ -87,6 +87,14 @@
     }
   }
 
+  &__eyebrow-wrapper {
+    background-color: var(--white);
+    border-top: 0.5rem solid var(--blue-600);
+    padding-left: $spacing;
+    padding-right: $spacing;
+    padding-top: 2rem;
+  }
+
   &__header {
     margin-bottom: $block-padding / 2;
     margin-top: -5rem;
@@ -94,9 +102,9 @@
     padding-top: $block-padding / 2 + 5rem;
 
     #{$root}--landing & {
-      background-color: var(--white);
-      border-top: 0.5rem solid var(--blue-600);
       grid-row: 3 / span 1;
+      padding: 0;
+      padding-top: $block-padding / 2 + 3rem;
     }
 
     @include mq($bkpt-tech-details--2-cols) {
@@ -106,8 +114,6 @@
 
       #{$root}--landing & {
         grid-row: 3 / span 1;
-        padding-left: $spacing;
-        padding-right: $spacing;
       }
     }
 
