--- a/templates/_layouts/tech-detail.html
+++ b/templates/_layouts/tech-detail.html
@@ -17,15 +17,10 @@ layout: _wrapper
   </div>
   {% endif %}
   <header class="tech-detail__header" id="content">
-    {% if landingPage %}
-    <div class="tech-detail__eyebrow-wrapper">
-      {% endif %} {% if eyebrow %}
-      <small class="type--eyebrow">{{eyebrow}}</small>
-      {% endif %}
-      <h1 class="type--h2">{{title}}</h1>
-      {% if landingPage %}
-    </div>
+    {% if eyebrow %}
+    <small class="type--eyebrow">{{eyebrow}}</small>
     {% endif %}
+    <h1 class="type--h2">{{title}}</h1>
   </header>
 
   {% if (content | toc or tools) and landingPage == false %}
