🆕 (ux) Create custom 404 experience
Locale-specific, and provides an option to search for content straight from it

Closes #12

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -82,6 +82,7 @@
 @import 'components/animation';
 @import 'components/home';
 @import 'components/pagination';
+@import 'components/page-not-found';
 
 // Page Layouts
 @import 'layouts/tech-detail';
