🐛 (ux) Output URL in hero

--- a/templates/_components/hero.html
+++ b/templates/_components/hero.html
@@ -18,7 +18,7 @@
     <small class="hero__eyebrow type--eyebrow">{{content.eyebrow}}</small>
     <h1 class="type--h1">{{content.title}}</h1>
     <p class="type--large">{{content.desc}}</p>
-    <a class="hero__link cta cta--high" href="{{post.cta.url}}">{{content.cta.text}}</a>
+    <a class="hero__link cta cta--high" href="{{content.cta.url}}">{{content.cta.text}}</a>
   </section>
   {% for image in content.images %}
   <img class="hero__image" src="{{image.image}}" alt="{{image.alt}}" />
