--- a/templates/_components/hero.html
+++ b/templates/_components/hero.html
@@ -17,7 +17,7 @@
   <section class="hero__copy-wrapper">
     <small class="hero__eyebrow type--eyebrow">{{content.eyebrow}}</small>
     <h1 class="type--h1">{{content.title}}</h1>
-    <p class="type--large">{{content.desc}}</p>
+    <p class="type--h3">{{content.desc}}</p>
     <a class="hero__link cta cta--high" href="{{content.cta.url}}">{{content.cta.text}}</a>
   </section>
   {% for image in content.images %}
