💎 (ux) Make all keys lowercase

--- a/src/sass/globals/extends/_type.scss
+++ b/src/sass/globals/extends/_type.scss
@@ -147,6 +147,7 @@
     margin: 0 0.125em;
     padding: 0 0.5em;
     text-rendering: optimizeLegibility;
+    text-transform: lowercase;
     vertical-align: text-bottom;
   }
 
