🆕 (web) Create dynamic PWA checklist
Takes the content from Powerful PWAs and transforms it into a dynamic checklist for users

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -83,6 +83,7 @@
 @import 'components/home';
 @import 'components/pagination';
 @import 'components/page-not-found';
+@import 'components/pwa-checklist';
 
 // Page Layouts
 @import 'layouts/tech-detail';
