🚑 (ux) Fix typo preventing accessible search button

--- a/templates/_components/search-box.html
+++ b/templates/_components/search-box.html
@@ -7,7 +7,7 @@
   @param {object} modifiers - classes that change how to display the search box.
 #}-->
 <div class="search-box {{modifiers.background}} {{modifiers.extended}} {{modifiers.headerClass}}">
-  <button arial-label="open search box" class="search-box__icon">
+  <button aria-label="open search box" class="search-box__icon">
     {{ icon('search')}}
   </button>
   <form class="search-box__wrapper" action="/{{localeCode}}/search">
