🆕 (general) Update home page to include I/O

--- a/src/sass/components/_image-card.scss
+++ b/src/sass/components/_image-card.scss
@@ -25,7 +25,9 @@
     position: relative;
     z-index: 2;
 
-    picture:not(:first-of-type) {
+    picture:not(:first-child),
+    video:not(:first-child),
+    img:not(:first-child) {
       left: 0;
       position: absolute;
       top: 0;
