🚑 (general) Revert breaking change from IO
Remove update to image-card
Remove I/O component from the home page

--- a/src/sass/components/_image-card.scss
+++ b/src/sass/components/_image-card.scss
@@ -25,9 +25,7 @@
     position: relative;
     z-index: 2;
 
-    picture:not(:first-child),
-    video:not(:first-child),
-    img:not(:first-child) {
+    picture:not(:first-of-type) {
       left: 0;
       position: absolute;
       top: 0;
