🚧 (code) Migrate all config here
Removes static-site-scaffold module indirection for eleventy config, migrates to newly build
submodules for that, upgrades to Node 14, and resolves 11ty build errors

Site now also builds in ~11s. I think that can still come down

--- a/templates/_components/component-preview.html
+++ b/templates/_components/component-preview.html
@@ -17,7 +17,7 @@
     <dl>
       {% for arg, settings in args %}
       <dt>{{arg}}</dt>
-      <dd>{% highlight "json" %}{{ settings | dump(2) | safe }}{% endhighlight %}</dd>
+      <dd>{% highlight "js" %}{{ settings | dump(2) | safe }}{% endhighlight %}</dd>
       {% endfor %}
     </dl>
   </details>
