🚧 (code) Get Sass working with Vite

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,8 +16,8 @@
  */
 
 // Modules
-@import 'breakpoint';
-@import 'toolkit';
+@import '$breakpoint';
+@import '$toolkit';
 
 // Globals
 @import 'globals/colors';
