👽 (code) Update Sass code for Dart Sass v2
Fixes Vite now working with Sass by not including Vite Plugin Image, but this is the primary update

--- a/src/sass/components/_animation.scss
+++ b/src/sass/components/_animation.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 .animation {
   $duration: 0.25s;
   $root: &;
@@ -10,7 +12,7 @@
 
       @for $i from 1 through 10 {
         &[data-step='#{$i}'] {
-          transition-delay: $duration / 2 * $i;
+          transition-delay: math.div($duration, 2) * $i;
         }
       }
     }
