--- a/src/sass/components/_wrapper.scss
+++ b/src/sass/components/_wrapper.scss
@@ -4,11 +4,13 @@
 // On wider screens (width > $content-max-width) if you have a component with a
 // full-bleed background use --alter-background-color to set it.
 
+@use 'sass:math';
+
 .wrapper {
   $content-max-width: pxRem(1440px);
 
   $max-width: 1024px;
-  $scaler: $max-width / 100 / 1vw;
+  $scaler: math.div(math.div($max-width, 100), 1vw);
 
   $block-spacing-s: 5.75rem;
   $block-spacing-l: 7.5rem;
@@ -18,18 +20,18 @@
   $bumper-s: 0.875rem;
   $bumper-l: 1.25rem;
 
-  $block-spacing-m: ($block-spacing-l + $block-spacing-s) / 2;
-  $inline-spacing-m: ($inline-spacing-l + $inline-spacing-s) / 2;
-  $bumper-m: ($bumper-l + $bumper-s) / 2;
+  $block-spacing-m: math.div(($block-spacing-l + $block-spacing-s), 2);
+  $inline-spacing-m: math.div(($inline-spacing-l + $inline-spacing-s), 2);
+  $bumper-m: math.div(($bumper-l + $bumper-s), 2);
 
   $this: #{&};
 
-  $block-spacing-r: clamp($block-spacing-s, ($block-spacing-l / 1rem * 16px / $scaler), $block-spacing-l);
-  $inline-spacing-r: clamp($inline-spacing-s, ($inline-spacing-l / 1rem * 16px / $scaler), $inline-spacing-l);
-  $bumper-r: clamp($bumper-s, ($bumper-l / 1rem * 16px / $scaler), $bumper-l);
+  $block-spacing-r: clamp($block-spacing-s, (math.div($block-spacing-l, 1rem) * math.div(16px, $scaler)), $block-spacing-l);
+  $inline-spacing-r: clamp($inline-spacing-s, (math.div($inline-spacing-l, 1rem) * math.div(16px, $scaler)), $inline-spacing-l);
+  $bumper-r: clamp($bumper-s, (math.div($bumper-l, 1rem) * math.div(16px, $scaler)), $bumper-l);
 
   height: auto;
-  margin: $block-spacing-m / 2 auto;
+  margin: math.div($block-spacing-m, 2) auto;
   max-width: $content-max-width;
 
   @supports (margin: clamp(1px, 1vw, 2px)) {
@@ -39,8 +41,8 @@
   &--padding {
     margin-bottom: 0;
     margin-top: 0;
-    padding-bottom: $block-spacing-m / 2;
-    padding-top: $block-spacing-m / 2;
+    padding-bottom: math.div($block-spacing-m, 2);
+    padding-top: math.div($block-spacing-m, 2);
 
     @supports (padding: clamp(1px, 1vw, 2px)) {
       padding-bottom: calc(#{$block-spacing-r} / 2);
@@ -105,7 +107,7 @@
   }
 
   &--bumper-top {
-    margin-top: $bumper-m + $block-spacing-m / 2;
+    margin-top: $bumper-m + math.div($block-spacing-m, 2);
 
     @supports (margin: clamp(1px, 1vw, 2px)) {
       margin-top: calc(#{$bumper-r} + #{$block-spacing-r} / 2);
@@ -113,7 +115,7 @@
 
     &#{$this}--padding {
       margin-top: 0;
-      padding-top: $bumper-m + $block-spacing-m / 2;
+      padding-top: $bumper-m + math.div($block-spacing-m, 2);
 
       @supports (padding: clamp(1px, 1vw, 2px)) {
         margin-top: 0;
@@ -123,7 +125,7 @@
   }
 
   &--bumper-bottom {
-    margin-bottom: $bumper-m + $block-spacing-m / 2;
+    margin-bottom: $bumper-m + math.div($block-spacing-m, 2);
 
     @supports (margin: clamp(1px, 1vw, 2px)) {
       margin-bottom: calc(#{$bumper-r} + #{$block-spacing-r} / 2);
@@ -131,7 +133,7 @@
 
     &#{$this}--padding {
       margin-bottom: 0;
-      padding-bottom: $bumper-m + $block-spacing-m / 2;
+      padding-bottom: $bumper-m + math.div($block-spacing-m, 2);
 
       @supports (padding: clamp(1px, 1vw, 2px)) {
         margin-bottom: 0;
@@ -202,9 +204,9 @@
   &__responsive-circle {
     $circle-s: 100px;
     $circle-l: 150px;
-    $circle-m: ($circle-l + $circle-s) / 2;
+    $circle-m: math.div(($circle-l + $circle-s), 2);
 
-    $medium: $circle-m / ($circle-l / $scaler / 100vw);
+    $medium: math.div($circle-m, (math.div(math.div($circle-l, $scaler), 100vw)));
     #{--circle-radius}: $circle-s;
     #{--circle-offset}: -50; // sass-lint:disable-line no-duplicate-properties
 
