--- a/src/sass/globals/_functions.scss
+++ b/src/sass/globals/_functions.scss
@@ -1,11 +1,12 @@
 // Global functions.
+@use "sass:math";
 
 // Pixels to ems.
 @function pxEm($px) {
-  @return $px / $base-font-size * 1em;
+  @return math.div($px, $base-font-size) * 1em;
 }
 
 // Pixels to rems.
 @function pxRem($px) {
-  @return $px / $base-font-size * 1rem;
+  @return math.div($px, $base-font-size) * 1rem;
 }
