--- a/site/_components/icon-card.njk
+++ b/site/_components/icon-card.njk
@@ -12,7 +12,7 @@
  #}-->
 {% macro iconCard(data, defaultText) -%}
 <article class="icon-card">
-  <img class="icon-card__image" src="{{data.image}}" class="icon-card__icon" alt="{{data.alt}}" />
+  <img class="icon-card__image icon-card__icon" src="{{data.image}}" alt="{{data.alt}}" />
   <div class="icon-card__copy">
     <p class="icon-card__title type--h5">{{data.title}}</p>
     <a href="{{data.cta.url}}" class="cta cta--link">{{data.cta.text if data.cta.text else defaultText}}</a>
