👽 (code) Migrate pictures to img
We're moving towards an automated image solution (#154) and won't be wrapping all of our images in
picture elements moving forward

--- a/site/sass/components/_author.scss
+++ b/site/sass/components/_author.scss
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
 
   // This style is needed because the picture tag is created automatically.
-  picture {
+  img {
     height: $photo-size;
     margin-bottom: 0.5rem;
     margin-right: 1rem;
