--- a/site/sass/components/_hero--cta.scss
+++ b/site/sass/components/_hero--cta.scss
@@ -13,7 +13,7 @@
     }
   }
 
-  picture {
+  img {
     flex: 1 1 10%;
     min-width: 60%;
     transform: translateX(17%) scale(1.1) translateY(1.5rem);
