--- a/site/sass/components/_typography.scss
+++ b/site/sass/components/_typography.scss
@@ -197,8 +197,7 @@ $section-block-margin: 3.75rem;
     margin-bottom: 0;
   }
 
-  figure > picture,
-  picture > img {
+  figure > img {
     display: block;
     margin-bottom: 0;
   }
