--- a/site/_generated/_components/footer.njk
+++ b/site/_generated/_components/footer.njk
@@ -3,7 +3,7 @@ pagination:
   data: site.l10n
   size: 1
   alias: l10n
-permalink: '_components/{{ l10n.locale.code | slug }}/footer.txt'
+permalink: '_components/{{ l10n.locale.code | slug }}/footer.html'
 ---
 
 {% from 'footer.njk' import footer %} {{ footer(l10n.locale.code, site.languages,l10n.footer,false ) }}
