--- a/site/_generated/_components/header.njk
+++ b/site/_generated/_components/header.njk
@@ -3,7 +3,7 @@ pagination:
   data: site.l10n
   size: 1
   alias: l10n
-permalink: '_components/{{ l10n.locale.code | slug }}/header.txt'
+permalink: '_components/{{ l10n.locale.code | slug }}/header.html'
 ---
 
 {% from 'header.njk' import header %} {{ header(l10n.nav, l10n.search.placeholder, l10n.locale, false) }}
