🐛 (code) Stop Vite yelling about Google Analytics
type="module" and analytics still appears to be loaded

--- a/site/_layouts/_wrapper.njk
+++ b/site/_layouts/_wrapper.njk
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Product+Sans:400&display=swap&text=chromeOS" />
     <link rel="stylesheet" href="/sass/style.scss" />
     <script type="module" defer src="/js/main.js"></script>
-    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-168234575-1"></script>
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-168234575-1" type="module"></script>
   </head>
   <body id="body">
     {% from 'header.njk' import header %} {{ header(nav, search.placeholder, locale) }}
