--- a/site/sass/components/_embed-responsive.scss
+++ b/site/sass/components/_embed-responsive.scss
@@ -5,5 +5,9 @@
   &-16by9 {
     // TODO: Add @supports PostCSS plugin to support iOS < 15
     aspect-ratio: 16 / 9;
+
+    > * {
+      aspect-ratio: 16 / 9;
+    }
   }
 }
