--- a/site/sass/components/_home.scss
+++ b/site/sass/components/_home.scss
@@ -1,6 +1,6 @@
 // Home page one-off styling
 // Done with IDs because there should only be one section each
-// sass-lint:disable no-ids
+/* stylelint-disable selector-max-id */
 #home {
   &__subnav .item-grid__title {
     margin-top: -6rem;
