--- a/site/sass/globals/_vars.scss
+++ b/site/sass/globals/_vars.scss
@@ -9,6 +9,8 @@ $font-roboto: 'Roboto', Arial, Helvetica, sans-serif;
 $font-google-sans: 'Google Sans', $font-roboto;
 $font-google-sans-display: 'Google Sans Display', $font-google-sans;
 $font-mono: 'Roboto Mono', monospace;
+$font-weight-normal: 400;
+$font-weight-bold: 700;
 
 // Base font size to be used for calculations.
 $base-font-size: 16px;
