--- a/site/sass/globals/extends/_type.scss
+++ b/site/sass/globals/extends/_type.scss
@@ -142,7 +142,7 @@
     font-family: $font-mono;
     font-size: 0.8em;
     font-variant: small-caps;
-    font-weight: bold;
+    font-weight: $font-weight-bold;
     letter-spacing: pxRem(1px);
     margin: 0 0.125em;
     padding: 0 0.5em;
