--- a/site/sass/components/_nav.scss
+++ b/site/sass/components/_nav.scss
@@ -64,10 +64,6 @@
     text-decoration: none;
     vertical-align: middle;
 
-    &[aria-expanded='true'] {
-      position: relative;
-    }
-
     @include maxLangMQ($bkpt-map--header--large) {
       padding: 0.875em 1.25em;
       position: relative;
@@ -76,7 +72,6 @@
 
       &[aria-haspopup] {
         &::after {
-          -webkit-mask-image: url('/images/icons/sprite.svg#expand-more'); // sass-lint:disable-line no-vendor-prefixes
           background-color: var(--grey-900);
           background-size: 1em;
           content: '';
@@ -140,6 +135,10 @@
         }
       }
     }
+
+    &[aria-expanded='true'] {
+      position: relative;
+    }
   }
 
   &--highlighted {
@@ -164,6 +163,7 @@
     }
   }
 
+  /* stylelint-disable-next-line  no-descending-specificity */
   &__primary {
     list-style: none;
     margin: unset;
@@ -200,6 +200,7 @@
     padding: 0;
   }
 
+  /* stylelint-disable-next-line  no-descending-specificity */
   &__header {
     background: var(--white);
     border-bottom: 1px solid var(--grey-300);
