--- a/site/sass/globals/_mixins.scss
+++ b/site/sass/globals/_mixins.scss
@@ -1,5 +1,5 @@
 // Global mixins.
-@use "sass:math";
+@use 'sass:math';
 
 // Sets font styles.
 @mixin fontSetup($size, $height, $weight: false, $rem: true) {
@@ -22,13 +22,12 @@
 // @param {length()} $lg - List of lengths, in px, representing font size and line height of the largest size
 // @param {number | boolean} $weight - Font weight, or false
 @mixin flexFont($sm, $md, $lg, $weight: false) {
-  // Setup basic font styling from medium size
-  @include fontSetup(nth($md, 1), nth($md, 2), $weight);
-
   // Determine scaling factor so that the large font size is reached at 1024px
   $font-scale: math.div(nth($lg, 1), 10.24px) * 1vw;
   // Set up clamp function
   $font-clamp: clamp(pxEm(nth($sm, 1)), $font-scale, pxEm(nth($lg, 1)));
+  // Setup basic font styling from medium size
+  @include fontSetup(nth($md, 1), nth($md, 2), $weight);
 
   // Check for support for clamp function
   @supports (font-size: $font-clamp) {
@@ -156,11 +155,13 @@
     }
 
     &::after {
-      #{--scoot}: 0rem; // sass-lint:disable-line zero-unit
+      // Because this is a CSS custom property, we need to include the unit
+      --scoot: 0rem; /* stylelint-disable-line length-zero-no-unit */
       left: calc(var(--space) * -1 - var(--scoot));
       width: calc(100% + (var(--space) * 2) - 4px + var(--scoot));
     }
 
+    /* stylelint-disable selector-max-compound-selectors */
     // Need to use tags selectors because ToC plugin doesn't allow for class customization
     // Will only go to a max depth of 4 because we start at H2s.
     ol ol &::after {
@@ -178,6 +179,7 @@
     ol ol ol ol ol &::after {
       #{--scoot}: 4rem;
     }
+    /* stylelint-enable selector-max-compound-selectors */
   }
 }
 
