--- a/site/sass/globals/extends/_cta.scss
+++ b/site/sass/globals/extends/_cta.scss
@@ -105,7 +105,7 @@
     color: var(--blue-600);
   }
 
-  // sass-lint:disable no-mergeable-selectors
+  /* stylelint-disable-next-line no-duplicate-selectors */
   &--low,
   &--link,
   &--back {
