Update CSS Custom Properties to use actual properties
Sass Lint had a problem with CSS Custom Properties so we had to do an interpolation hack to get around it. It's no longer needed

--- a/site/sass/components/_colors.scss
+++ b/site/sass/components/_colors.scss
@@ -4,6 +4,6 @@
     #{$name}: #{$v};
   }
 
-  #{'--black'}: map-get($google-colors, 'grey-900');
-  #{'--white'}: #fff;
+  --black: #{map-get($google-colors, 'grey-900')};
+  --white: #ffffff;
 }
