--- a/site/sass/globals/extends/_cta.scss
+++ b/site/sass/globals/extends/_cta.scss
@@ -93,7 +93,7 @@
     display: inline-block;
 
     &:visited {
-      #{--visited-color}: var(--blue-600);
+      --visited-color: var(--blue-600);
       color: var(--blue-600);
     }
   }
