--- a/site/sass/layouts/_article.scss
+++ b/site/sass/layouts/_article.scss
@@ -4,8 +4,8 @@
 //   --eyebrow-color: changes the top border color of the eyebrow, defaults to blue-600.
 
 .article {
+  --col-padding: #{pxRem(28px)};
   $default-eyebrow-color: map-get($google-colors, 'blue-600');
-  #{--col-padding}: pxRem(28px);
 
   display: grid;
 
@@ -14,7 +14,7 @@
   }
 
   @include mq($bkpt-articles--3-cols) {
-    #{--col-padding}: pxRem(60px);
+    --col-padding: #{pxRem(60px)};
 
     grid-template-columns: 1fr minmax(min-content, pxRem(300px)) minmax(50ch, 90ch) minmax(min-content, pxRem(300px)) 1fr;
 
