--- a/site/sass/components/_card-subnav.scss
+++ b/site/sass/components/_card-subnav.scss
@@ -66,7 +66,7 @@
 
     &:hover,
     &:focus {
-      #{'--anchor-color'}: $anchor-color--hover;
+      --anchor-color: #{$anchor-color--hover};
       background-color: var(--blue-50);
       border-radius: 4px;
     }
