--- a/site/sass/components/_nav.scss
+++ b/site/sass/components/_nav.scss
@@ -2,11 +2,10 @@
 // This is pretty complex as we have two almost entirely separate sets of styling represented here
 
 .nav {
+  --nav-transition: none;
   $transition-duration: 0.375s;
   $transition-timing: ease-in-out;
   $transition-space: $transition-duration $transition-timing;
-
-  #{--nav-transition}: none;
 
   @include maxLangMQ($bkpt-map--header--large) {
     height: 100vh;
@@ -31,10 +30,10 @@
   }
 
   &--animated {
-    #{--nav-transition}: transform $transition-space;
+    --nav-transition: transform #{$transition-space};
 
     @media (prefers-reduced-motion: reduce) {
-      #{--nav-transition}: none;
+      --nav-transition: none;
     }
   }
 
