--- a/site/sass/globals/extends/_type.scss
+++ b/site/sass/globals/extends/_type.scss
@@ -92,7 +92,7 @@
   }
 
   &--caption {
-    #{--icon-offset}: 0.1em;
+    --icon-offset: 0.1em;
     @include fontSetup(14px, 18px, 400);
     color: var(--grey-700);
   }
